Article overflow bug

--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -104,6 +104,8 @@ a:active
             margin-top: 50px
 
     .article
+        overflow: auto
+
         h1, h2, h3, h4
             color: $color-primary
             font-weight: 300
